iframe not showing in center fixed

--- a/jktmyanmarint.com/assets/css/main.css
+++ b/jktmyanmarint.com/assets/css/main.css
@@ -2063,9 +2063,12 @@ figure img {
 .fb-iframe {
   /* display: block; */
   /* border: 1px solid lightgrey; */
+  margin-left : auto;
+  margin-right : auto;
   height: 807px;
   overflow: hidden;
   padding-top: 7px;
+  width : inherit;
 }
 /* width */
 iframe::-webkit-scrollbar {
@@ -2753,6 +2756,9 @@ iframe::-webkit-scrollbar-thumb:hover {
   .detail-modal-content {
     width: 75vw;
   }
+  .fb-iframe{
+    width :500px;
+  }
 }
 @media only screen and (max-width: 992px) and (min-width: 767px) {
   .about-img-blog {
@@ -3158,3 +3164,4 @@ iframe::-webkit-scrollbar-thumb:hover {
     height: 270px;
   }
 }
+
